# onetimesecret-cli

./: README.md  pyproject.toml  setup.cfg
onetimesecret/: __init__.py  onetimesecret.py  test_onetimesecret.py
