[metadata]
name = onetimesecret
version = 1
author = Mauricio
author_email = mtdb.github.n20n0@passinbox.com
description = simple api client for onetimesecret.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slashpass/onetimesecret-cli
project_urls =
    Bug Tracker = https://github.com/slashpass/onetimesecret-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires=
    requests
